# sourcerykit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  alembic.ini  docker-compose.yml  llms.txt  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: benchmarks.yml  ci.yml  publish.yml  release.yml  sync-docs.yml
alembic/: env.py
alembic/versions/: 000_purge_previous_schema.py  001_create_provably_intercepts.py  002_create_trusted_endpoints.py  003_create_traces_and_trace_intercepts.py  004_add_call_ref_to_intercepts.py  005_add_answer_to_traces.py  005_add_reasoning_to_traces.py
benchmarks/: CHANGELOG-PERF.md  README.md  compare.py  run_suite.py
benchmarks/results/: .gitignore
cookbooks/: README.md
cookbooks/claude_agent/: README.md  agent_run.py
cookbooks/claude_agent_multi_tool/: README.md  agent_run.py
cookbooks/crewai_multi_agent/: README.md  agent_run.py
cookbooks/langchain_agent/: README.md  agent_run.py
cookbooks/langgraph_multi_agent/: README.md  agent_run.py
cookbooks/openai_agents/: README.md  agent_run.py
cookbooks/openai_agents_multi_agent/: README.md  agent_run.py
docs/: README.md  api.md  architecture.md  cli.md  conf.py  docs.config.ts  example.md  handoff.md  index.md  intercept.md  onboarding.md  trusted-endpoints.md
docs/getting_started/: cli.md  end-to-end-walkthrough.md  onboarding.md
docs/historical-plans/: README.md  split-from-monorepo.md
docs/migrations/: README.md
docs/migrations/unreleased/: unreleased.md
docs/migrations/v1_0/: v1_0.md
docs/pillars/: architecture.md  handoff.md  interceptor.md  trusted-endpoints.md
docs/src/: api.md  provably.md
docs/src/cookbooks/: claude_agent.md  claude_agent_multi_tool.md  crewai_multi_agent.md  index.md  langchain_agent.md  langgraph_multi_agent.md  openai_agents.md  openai_agents_multi_agent.md
docs/src/examples/: langchain_agent.md  local_model.md  openai_agents.md
examples/claude_agent/: README.md
examples/langchain_agent/: README.md  agent_run.py
examples/local_model/: .env.example  README.md  agent_run.py
examples/manual_loop/: README.md  agent_run.py
examples/openai_agents/: README.md  agent_run.py
implementations/github_api/: README.md  agent_run.py
implementations/local_model/: README.md  agent_run.py
implementations/openai_agents/: README.md  agent_run.py
scripts/: ci-local.sh
skills/init-sourcerykit/: SKILL.md
src/agentkit/: __init__.py  config.py  log.py  logger.py  runtime.py  trusted_endpoints.py
src/agentkit/bootstrap/: __init__.py  _cache.py  bootstrap.py  provably.py
src/agentkit/db/: __init__.py  _engine.py  _intercepts.py  _trusted_endpoints.py  engine.py  intercepts.py  schema.py  trusted_endpoints.py
src/agentkit/errors/: __init__.py
src/agentkit/evaluation/: __init__.py  eval_modes.py  evaluator.py
src/agentkit/evaluator/: __init__.py  _eval_modes.py  eval_modes.py  evaluator.py
src/agentkit/handoff/: __init__.py  _bootstrap.py  _discovery.py  _http.py  _preprocess.py  _query_records.py  _resources.py  client.py  contract.py  eval_modes.py  evaluator.py  guide.py  outcomes.py  payload_builder.py  transport.py  types.py
src/agentkit/intercept/: __init__.py  _aiohttp_hook.py  _httpx_hook.py  _loader.py  _self_egress.py  _storage.py  interceptor.py
src/agentkit/provably/: __init__.py  _api.py  _errors.py  _http.py  answer_model.py  api.py  errors.py  service.py
src/agentkit/schemas/: __init__.py  agent_response.py  handoff.py  verification_mode.py
src/agentkit/trusted_endpoints/: __init__.py  service.py  trusted_endpoints.py
src/agentkit/utils/: __init__.py  validation.py
src/provably/: __init__.py  log.py  runtime.py  trusted_endpoints.py
src/provably/common/: env.py
src/provably/handoff/: __init__.py  _bootstrap.py  _discovery.py  _http.py  _preprocess.py  _query_records.py  _query_resolution.py  client.py  contract.py  eval_modes.py  evaluator.py  guide.py  json_utils.py  outcomes.py  payload_builder.py  transport.py  types.py
src/provably/intercept/: __init__.py  _reentry.py  _responses.py  _self_egress.py  _storage.py  interceptor.py
src/sourcerykit/: __init__.py  config.py  logger.py  testing.py
src/sourcerykit/bootstrap/: __init__.py  _cache.py  bootstrap.py
src/sourcerykit/cli/: config.py  doctor.py  endpoints.py  feedback.py  init.py  logo.py  main.py  trace.py  upgrade.py  utils.py
src/sourcerykit/db/: _engine.py  _intercepts.py  _schema.py  _traces.py  _trusted_endpoints.py
src/sourcerykit/errors/: __init__.py
src/sourcerykit/evaluator/: __init__.py  _eval_modes.py  evaluator.py
src/sourcerykit/handoff/: __init__.py  _guide.py  _preprocess.py  _query_records.py  payload_builder.py
src/sourcerykit/intercept/: __init__.py  _aiohttp_hook.py  _httpx_hook.py  _loader.py  _storage.py  interceptor.py  requests_hook.py
src/sourcerykit/provably/: __init__.py  _answer_model.py  _api.py  _auth_api.py  _errors.py  _http.py  auth_service.py  service.py
src/sourcerykit/schemas/: __init__.py  agent_response.py  handoff.py  (+2 more)
tests/: conftest.py  test_evaluator_core.py  test_interceptor.py  test_trusted_endpoints.py
tests/e2e/: conftest.py  test_evaluate_handoff_e2e.py  test_interceptor_e2e.py  test_openai_agents_e2e.py  test_post_handoff_e2e.py
tests/unit/: test_answer_model.py  test_api.py  test_auth_api.py  test_auth_service.py  test_bootstrap.py  test_call_ref.py  test_cli.py  test_client.py  test_config.py  test_config_cli.py  test_contract.py  test_db_helpers.py  test_discovery.py  test_doctor.py  test_endpoints.py  test_errors.py  test_eval_modes.py  test_evaluator_core.py  test_feedback.py  test_guide.py  test_http.py  test_intercept_context.py  test_interceptor.py  test_loader.py  test_outcomes.py  test_payload_builder.py  test_query_records.py  test_query_resolution.py  test_resources.py  test_runtime.py  test_schemas.py  test_service.py  test_storage.py  test_trace.py  test_transport.py  test_trusted_endpoints.py  test_upgrade.py
(+7 files in other folders)
