[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "sourcerykit"
version = "1.0.1"
description = "Counterspell for hallucinating agents. Python SDK that breaks the illusion on every tool call, API response, and MCP handoff before bad outputs propagate."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "Business Source License 1.1" }
authors = [{ name = "Provably Technologies Ltd" }]
keywords = [
    "sourcerykit",
    "provably",
    "verifiable",
    "agent",
    "ai-agents",
    "llm",
    "guardrails",
    "llm-security",
    "observability",
    "hallucination",
    "handoff",
    "interceptor",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "alembic>=1.13",
    "greenlet>=3.0",
    "httpx>=0.26",
    "aiohttp>=3.9",
    "requests >=2.34",
    "jsonschema>=4.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "python-dotenv>=1.2",
    "sqlalchemy>=2.0",
    "structlog>=24.1",
    "msgspec>=0.18.0",
    "questionary >= 2.1",
    "typer >= 0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "coverage[toml]>=7.0",
    "ruff>=0.3",
    "build>=1.2",
    "mypy>=1.10",
    "pre-commit>=4.0",
    "types-jsonschema>=4.0",
    "types-requests>=2.31",
    "openai-agents>=0.0.3",
    "bump-my-version>=0.30",
]

[project.urls]
Homepage = "https://provably.ai"
Documentation = "https://provably.ai/docs"
Repository = "https://github.com/ProvablyAI/sourcerykit"
"Bug Tracker" = "https://github.com/ProvablyAI/sourcerykit/issues"
Changelog = "https://github.com/ProvablyAI/sourcerykit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/sourcerykit"]

[tool.hatch.build.targets.sdist]
include = [
    "src/sourcerykit",
    "README.md",
    "LICENSE.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".cache", ".venv", "venv", "dist", "build", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
known-first-party = ["sourcerykit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that drive the SDK against a real loopback HTTP server",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
strict = true
warn_unreachable = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["psycopg2", "psycopg2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiohttp", "aiohttp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai_agents", "openai_agents.*", "agents", "agents.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
warn_required_dynamic_aliases = true

[tool.coverage.run]
source = ["sourcerykit"]
branch = true

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError", "\\.\\.\\."]

[project.scripts]
sourcerykit = "sourcerykit.cli.main:app"

[tool.bumpversion]
current_version = "1.0.1"
commit = false
tag = false
tag_name = "v{new_version}"
allow_dirty = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<pre>a|b|rc)?(?P<pre_num>\\d+)?"
serialize = [
    "{major}.{minor}.{patch}{pre}{pre_num}",
    "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.pre]
values = ["", "a", "b", "rc"]
optional_value = ""
depends_on = "patch"

[tool.bumpversion.parts.pre_num]
first_value = 1
depends_on = "pre"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## Unreleased"
replace = "## Unreleased\n\n## {new_version}"
